--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,14 @@ Makefile
 node_modules/
 examples/node/svgdump/
 examples/node/pdf2png/*.png
+.git/
+.1024nix
+.1024feature-file
+Thumbs.db
+.nfs*
+.pnpm-store/
+dist/
+*.log
+npm-debug.log*
+yarn-debug.log*
+.pnpm-debug.log*
