--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,25 @@ dist/
 npm-debug.log*
 yarn-debug.log*
 .pnpm-debug.log*
+.env
+*.env.local
+*.env.development.local
+*.env.test.local
+*.env.production.local
+.pnpm-debug.log*
+*.tsbuildinfo
+env/
+venv/
+**/__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+.Python
+*.env
+*.exe
+*.out
+*.test
+*.sqlite
+*.db
+*.sql
+*.sql-journal
